<resources>
    <string name="app_name">RealConductor</string>
    <string name="aceptar">Aceptar</string>
    <string name="action_settings">Ajustes</string>
    <string name="button_app_version">Actualizar ahora</string>
    <string name="cancel">Cancelar</string>
    <string name="confim_cancel_service">¿Estás seguro de cancelar el servicio?</string>
    <string name="dialog_titulo_taxisya">Taxis Ya</string>
    <string name="email">Cédula</string>
    <string name="enable">Habilitando</string>
    <string name="error1">¡Este servicio fue confirmado por otro taxi!</string>
    <string name="error2">¡Este servicio fue cancelado por el usuario!</string>
    <string name="error3">¡Este servicio fue confirmado!"</string>
    <string name="error_arrived">Hubo un error en la confirmacion de llegada , intentelo de nuevo!</string>
    <string name="error_cancel_service">Hubo un error al cancelar el servicio, intente de nuevo</string>
    <string name="error_disable">Hubo un error deshabilitando, intentelo de nuevo</string>
    <string name="error_dos">Este usuario ya esta logueado en otro dispositivo..</string>
    <string name="network_connectivity_message">Verificando...</string>
    <string name="error_net">¡No esta conectado internet!</string>
    <string name="error_tres">Su afiliación se encuentra vencida , comuniquese con la central para activarla de nuevo.</string>
    <string name="error_uno">Usuario o contraseña incorrectos.</string>
    <string name="gcmintentservice_mensaje_otro_dispositivo">Sesíón cerrada por otro dispositivo</string>
    <string name="hello_world">kr 72 j bis # 40 c 50 sur apt 402 in 10 Barrio Timiza Nombre Esteban Quintero</string>
    <string name="historial_subtitulo">en el último mes</string>
    <string name="historial_titulo_1">Historial</string>
    <string name="historial_titulo_2">de Servicios</string>
    <string name="historico_aviso_sin_historial">No tienes servicios recientes</string>
    <string name="historico_barrio">"Barrio: "</string>
    <string name="historico_calificacion_buena">Bueno</string>
    <string name="historico_calificacion_mala">Malo</string>
    <string name="historico_calificacion_muy_buena">Muy Bueno</string>
    <string name="historico_calificacion_nada">Ninguna</string>
    <string name="historico_calificacion_ninguna">Calificación: Ninguna</string>
    <string name="historico_calificacion_prefijo">"Calificación: "</string>
    <string name="historico_fecha">"Fecha: </string>
    <string name="historico_numero">Servicio #</string>
    <string name="historico_titulo_dialogo">Cargando servicios...</string>
    <string name="important">Importante</string>
    <string name="login_aceptar">Aceptar</string>
    <string name="login_aviso_error_login">¡Ocurrio un problema al ingresar! inténtalo de nuevo</string>
    <string name="login_aviso_ingreso_datos">Ingrese sus datos de acceso</string>
    <string name="login_deshabilito_login_otro_dispositivo">Se deshabilitó , pues se inicio una sesión en otro dispositivo</string>
    <string name="login_titulo_autenticando">Autenticando...</string>
    <string name="login_titulo_dialogo">Información importante</string>
    <string name="login_titulo_dialogo_mensaje">Información importante</string>
    <string name="login_titulo_placas">Placas disponibles</string>
    <string name="logint_aviso_registro">Nuestras oficinas</string>
    <string name="logint_direccion_oficina">Calle 1C Bis #18-34</string>
    <string name="logint_subtitulo">para acceder al sistema</string>
    <string name="logint_telefono_oficina">Teléfono: 350 200 0000</string>
    <string name="logint_titulo_1">Ingresa </string>
    <string name="logint_titulo_2">tus Datos</string>
    <string name="map_button_cancelar">Cancelar</string>
    <string name="map_button_finalizar">Finalizar</string>
    <string name="map_button_ya_llegue">Ya estoy aquí</string>
    <string name="map_enviando_aviso_cliente">Enviando información al cliente....</string>
    <string name="mapa_cancelando_servicio">Cancelando Servicio...</string>
    <string name="mapa_finalizando_servicio">Finalizando servicio...</string>
    <string name="mapa_respuesta_no">No</string>
    <string name="mapa_respuesta_si">Si</string>
    <string name="mapa_titulo_direccion">"Dirección: "</string>
    <string name="message_app_version">Hay una nueva versión de Taxisya disponible; esta versión ya no es compatible. Para continuar debes actualizar la aplicación</string>
    <string name="my_cars_button_confirmar">Confirmar</string>
    <string name="no_gps">¡Hay problemas con el gps!</string>
    <string name="oper_cancel">¡La operadora ha cancelado el servicio!</string>
    <string name="ready_enable">%1$s te encuentras habilitado.</string>
    <string name="saliendo_aplicacion">Saliendo de la aplicación...</string>
    <string name="servicio_finalizado">El servicio se finalizó exitosamente.</string>
    <string name="the_user_arrived">El Cliente ha recibido la informacion.</string>
    <string name="tipo_agendamiento_aeropuerto">Aeropuerto</string>
    <string name="tipo_agendamiento_fuera_de_ciudad">Fuera de la ciudad</string>
    <string name="tipo_agendamiento_mensajeria">Mensajería</string>
    <string name="tipo_agendamiento_por_horas">Por Horas</string>
    <string name="title_app_version">Actualización disponible</string>
    <string name="update_play_service">Actualice Google Play Services</string>
    <string name="user_cancel">¡El usuario ha cancelado el servicio!</string>
    <string name="verificando">Verificando...</string>
    <string name="waitservice_button_deshabilitarme">Deshabilitarme</string>
    <string name="waitservice_errot_conexion">Hubo un error en su conexión a internet! En este momento no recibirá servicios</string>
    <string name="waitservice_no_permitido_otro_servicio">No puede tomar otro servicio adicional</string>
    <string name="waitservice_numeros_cuarta">cuarta</string>
    <string name="waitservice_numeros_decima">decima</string>
    <string name="waitservice_numeros_novena">novena</string>
    <string name="waitservice_numeros_octava">octava</string>
    <string name="waitservice_numeros_primera">primera</string>
    <string name="waitservice_numeros_quinta">quinta</string>
    <string name="waitservice_numeros_segunda">segunda</string>
    <string name="waitservice_numeros_septima">septima</string>
    <string name="waitservice_numeros_sexta">sexta</string>
    <string name="waitservice_numeros_tercera">tercera</string>
    <string name="waitservice_se_deshabilito_otro_dispositivo">Se deshabilitó , pues se inicio una sesión en otro dispositivo</string>
    <string name="waitservice_texto_barrio">"\nBarrio: "</string>
    <string name="waitservice_texto_barrio2">" Barrio: "</string>
    <string name="waitservice_texto_hablado_numero">"  numero  "</string>
    <string name="waitservice_texto_hora">" Hora: "</string>
    <string name="waitservice_texto_servicio">" Servicio "</string>
    <string name="waitservice_texto_sur">sur</string>
    <string name="waitservice_titulo_1">Servicios </string>
    <string name="waitservice_titulo_2">Activos</string>
    <string name="waitservice_titulo_deshabilitando">Deshabilitando...</string>
    <string name="waitservice_titulo_dialogo">Información importante</string>
    <string name="waitservice_titulo_envio_confirmacion">Enviando Confirmacion...</string>
    <string name="welcome">Bienvenido   %1$s   a taxisya</string>
    <string name="yourpassword">Contraseña</string>
    <string name="app_versions">app/versions</string>
    <string name="arrived_serivce">v2/driver/%1$s/arrive</string>
    <string name="cancel_service">v2/driver/%1$s/cancelservice</string>
    <string name="arrived_service_probe">service/arrived</string>
    <string name="checkstatuservice">service/status</string>
    <string name="confirm_service">v2/driver/%1$s/confirmservice</string>
    <string name="disable_driver">v2/driver/%1$s/disable</string>
    <string name="enable_driver">v2/driver/%1$s/enable</string>
    <string name="finish_service">service/finish2</string>
    <string name="is_logued">driver/islogued</string>
    <string name="load_history">service/driver</string>
    <string name="login">driver/login</string>
    <string name="logout">driver/logout</string>
    <string name="sendmyposition">v2/driver/%1$s/updateposition</string>
    <string name="title_activity_forg_pass">ForgPass</string>
    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="update_car">driver/updatecar</string>
    <string name="mapview_servicio_cancelado">El servicio fue cancelado por el usuario</string>
    <string name="login_btn_ingresar">Ingresar</string>
    <string name="login_btn_register">Registro Primera Vez</string>
    <string name="login_btn_Yacuenta">Ya tengo cuenta</string>
    <string name="login_btn_forgot">¿Olvidaste la contraseña?</string>
    <string name="title_activity_register_driver">RegisterDriverActivity</string>
    <string name="Terms"><u>Acepto terminos y condiciones</u></string>
    <string name="register_driver_name">Nombre</string>
    <string name="register_driver_identify">Cédula</string>
    <string name="register_driver_license">Licencia de Conducción</string>
    <string name="register_driver_phone">Teléfono</string>
    <string name="register_driver_cellphone">Celular</string>
    <string name="register_driver_address">Dirección</string>
    <string name="register_driver_email">Email (correo electrónico)</string>
    <string name="register_driver_password">Tu contraseña</string>
    <string name="register_driver_car_plate">Placa del vehículo</string>
    <string name="register_driver_car_brand">Marca del vehículo</string>
    <string name="register_driver_car_line">Línea del vehículo</string>
    <string name="register_driver_car_mobile_id">Móvil del vehículo</string>
    <string name="register_driver_car_year">Modelo del vehículo</string>
    <string name="register_driver_car_company">Compañia del vehículo</string>
    <string name="register_driver_photo">Foto Conductor</string>
    <string name="register_driver_card_operation">Tarjeta Operación</string>
    <string name="register_driver_document_photo">Foto Cédula</string>
    <string name="register_driver_license_photo">Foto Licencia</string>
    <string name="register_driver_card_property">Tarjeta Propiedad</string>
    <string name="register_driver_in_progress">Registro en proceso...</string>
    <string name="register_driver_failure">Sus datos presentan inconsistencias. Por favor contactenos en la siguiente página web http://www.taxisya.co</string>
    <string name="register_ok_message">Gracias por su registro, lo contactaremos para que pueda comenzar a utilizar nuestro servicio</string>
    <string name="register_bad_message">El registro falló</string>
    <string name="register_all_fields">Todos los campos y fotos son obligatorios</string>
    <string name="enable_titulo_dialogo">¡Vehiculo en uso!</string>
    <string name="enable_error_message_part1">El vehículo esta en uso. Por favor contacte al conductor </string>
    <string name="enable_error_message_part2">al celular </string>
    <string name="title_activity_reset_pass">ResetPassActivity</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="digita_tu_direcci_n_de_correo">Digita tu correo electrónico</string>
    <string name="codigo_de_confirmaci_n">Codigo de confirmación</string>
    <string name="digita_nueva_contrase_a">Digita nueva contraseña</string>
    <string name="texto_finalizado">Finalizado</string>
    <string name="se_ha_enviado_a_tu_correo_electronico_un_codigo_de_confirmaci_n">Se ha enviado a tu correo electrónico un codigo de confirmacion</string>
    <string name="text_contrasena_restablecida">Contraseña restablecida con éxito</string>
    <string name="text_usuario_no_existe_codigo_incorrecto">Este usuario no existe. ¡Código incorrecto!</string>
</resources>